# filewatcher

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.yaml
src/: filewatcher.py  main.py  ws_api.py
test/: test_filewatcher.py
